app/src/css/style.css
body {
	background: #1a1a1a;
	color: white;
	font-family: Arial, Helvetica, sans-serif;
}

/* https://stackoverflow.com/a/18294634 */
.grabCursor {
	cursor: move; /* fallback if grab cursor is unsupported */
	cursor: grab;
	cursor: -moz-grab;
	cursor: -webkit-grab;
}
.grabCursor:active {
	/* (Optional) Apply a "closed-hand" cursor during drag operation. */
	cursor: grabbing;
	cursor: -moz-grabbing;
	cursor: -webkit-grabbing;
}

summary {
	cursor: pointer;
}

.box {
	border: 1px solid #fff;
	background-color: #000;
	position: relative;
}

.box:before,
.box[note]:after,
.box > span.infoBox {
	position: absolute;
	z-index: 20;
	font-size: 12px;
	font-family: monospace;
	background: rgba(0,0,0,0.5);
	padding: 2px 4px;
}

.box:before { content: attr(box_label); }

.box[note]::after {
	content: attr(note);
	white-space: pre;
	text-align: right;
	/* color: yellow; */
	float: right;
	/* bottom: .5em; right: .5em; */
	bottom: 0; right: 0;
}

.box.note_colored::after { color: yellow; }

.parameterDisplay,
.magDisplay,
.metricsDisplay {
	top: 0;
	right: 0;
	text-align: right;
	user-select: none;
}

.box > span.parameterDisplay { cursor: pointer; }

.box > .extraInfoDisplay {
	bottom: 0;
	left: 0;
}

.final {
	background-color: #172542;
	border: 1px solid red;
}

.layout {
	display: flex;
	flex-wrap: wrap;
	gap: 10px;
}

.load_spinner_svg {
	width: 16px;
	position: relative;
	top: .2em;
	float: right;
}

#options { width: fit-content; }

#options-handle {
	text-align: center;
	background-color: #172542;
}

#options-anchor {
	display: inline-block;
	position: absolute;
	right: 0.25em;
	user-select: none;
	cursor: move;
}

#options-full-resample {
	padding: .5em;
	z-index: 30;
	background: rgba(0,0,0,0.6);
	border: solid 1px rgba(255,255,255,0.6);
}

#options-full-resample-anchor {
	display: inline-block;
	position: absolute;
	right: .25em;
	bottom: .25em;
}

#status {
	font-size: 10px;
}

